--- a/src/components/ModelXSection.astro
+++ b/src/components/ModelXSection.astro
@@ -8,15 +8,15 @@ import Section from "./Section.astro";
   color="black"
   id="model-x"
 >
-  <div slot="footer" class="gap-x-6 flex mx-auto">
+  <div slot="footer" class="md:gap-x-6 md:gap-y-0 flex mx-auto md:flex-row flex-col gap-y-4">
     <a
-      class="border-[3px] border-gray-600 bg-gray-600 text-sm rounded font-medium text-white px-12 py-2 inline-block transition-colors hover:border-gray-500 hover:bg-gray-500"
+      class="border-[3px] border-gray-600 bg-gray-600 text-sm rounded font-medium text-white px-20 md:px-12 py-2 inline-block transition-colors hover:border-gray-500 hover:bg-gray-500"
       href="#"
     >
       Pedido personalizado</a
     >
     <a
-      class="bg-white text-sm rounded font-medium px-12 py-2 transition-colors hover:bg-black hover:text-white inline-flex justify-center items-center text-black"
+      class="bg-white text-sm rounded font-medium px-20 md:px-12 py-2 transition-colors hover:bg-black hover:text-white inline-flex justify-center items-center text-black"
       href="#"
     >
       Saber más</a
