--- a/src/components/Accesories.astro
+++ b/src/components/Accesories.astro
@@ -10,7 +10,7 @@ import Section from "./Section.astro";
 >
   <div slot="footer" class="gap-x-6 flex mx-auto">
     <a
-      class="border-[3px] border-black bg-black text-sm rounded font-medium text-white px-12 py-2 inline-block transition-colors duration-300 hover:border-gray-800 hover:bg-gray-800"
+      class="border-[3px] border-black bg-black text-sm rounded font-medium text-white px-24 md:px-12 py-2 inline-block transition-colors duration-300 hover:border-gray-800 hover:bg-gray-800"
       href="#"
     >
       Comprar ahora</a
