--- a/src/components/LandingHeader.astro
+++ b/src/components/LandingHeader.astro
@@ -1,40 +1,88 @@
 ---
-import Logo from "./Logo.astro";
-
+import Logo from './Logo.astro';
 ---
 
 <header
-  class='py-3 px-10 flex items-center fixed top-0 justify-between w-full z-40 text-white'
-  id="landingHeader"
+  class='py-3 md:px-10 px-4 flex items-center fixed top-0 justify-between w-full z-40 text-white'
+  id='landingHeader'
 >
   <div class='flex flex-grow basis-0'>
-    <Logo />
+    <a href='index.html'>
+      <Logo />
+    </a>
   </div>
-  <nav>
+  <button id="menu" class='md:hidden bg-black/5 backdrop-blur-lg px-4 py-1 rounded'
+    >Menú</button
+  >
+  <nav
+    id='navResponsive'
+    class='md:hidden bg-white text-black h-screen w-[80%] absolute top-0 -right-[100%] transition-all duration-500 opacity-0'
+  >
+    <div class='flex justify-end p-6 '>
+      <img
+      id="cross"
+        src='/cross.svg'
+        class='w-[24px] cursor-pointer'
+        alt=''
+      />
+    </div>
+    <ul
+      id="list" class='flex flex-col text-sm gap-y-2 [&>li>a]:inline-block [&>li>a]:transition-colors [&>li>a]:text-current px-6 py-1 [&>li>a]:px-4 [&>li>a]:py-2'
+    >
+      <li>
+        <a href='#model-s'>Model S</a>
+      </li>
+      <li>
+        <a href='#model-3'>Model 3</a>
+      </li>
+      <li>
+        <a href='#model-x'>Model X</a>
+      </li>
+      <li>
+        <a href='#model-y'>Model Y</a>
+      </li>
+      <li>
+        <a href='#powerwall'>Powerwall</a>
+      </li>
+      <li>
+        <a href='#accesorios'>Carga</a>
+      </li>
+      <li>
+        <a href='#'>Soporte</a>
+      </li>
+      <li>
+        <a href='#'>Tienda</a>
+      </li>
+      <li>
+        <a href='#'>Cuenta</a>
+      </li>
+    </ul>
+  </nav>
+  <nav class='hidden md:block'>
     <ul
       class='flex text-sm [&>li>a]:inline-block [&>li>a]:transition-colors [&>li>a]:text-current [&>li>a]:px-4 [&>li>a]:py-2 [&>li>a]:font-medium'
     >
       <li>
-        <a href='#'>Model S</a>
+        <a href='#model-s'>Model S</a>
       </li>
       <li>
-        <a href='#'>Model 3</a>
+        <a href='#model-3'>Model 3</a>
       </li>
       <li>
-        <a href='#'>Model X</a>
+        <a href='#model-x'>Model X</a>
       </li>
       <li>
-        <a href='#'>Model Y</a>
+        <a href='#model-y'>Model Y</a>
       </li>
       <li>
-        <a href='#'>Powerwall</a>
+        <a href='#powerwall'>Powerwall</a>
       </li>
       <li>
-        <a href='#'>Carga</a>
+        <a href='#accesorios'>Carga</a>
       </li>
     </ul>
   </nav>
-  <nav class='flex flex-grow justify-end basis-0'>
+  <nav class='flex-grow justify-end basis-0 hidden md:flex'>
     <ul
       class='flex text-sm [&>li>a]:inline-block [&>li>a]:transition-colors [&>li>a]:text-current [&>li>a]:px-4 [&>li>a]:py-2 [&>li>a]:font-medium'
     >
@@ -47,59 +95,88 @@ import Logo from "./Logo.astro";
       <li>
         <a href='#'>Cuenta</a>
       </li>
-      <li>
-        <a href='#'>Menú</a>
-      </li>
     </ul>
   </nav>
-  <div id="menuBackdrop"
-    class={`absolute bg-black/5 backdrop-blur-lg rounded translate-x-[var(--left)] translate-y-[var(--top)] w-[var(--width)] h-[var(--height)] transition-all duration-500 ease-in-out opacity-0 -z-10 top-0 left-0`}
-  ></div>
+  <div
+    id='menuBackdrop'
+    class={`absolute bg-black/5 backdrop-blur-lg rounded translate-x-[var(--left)] translate-y-[var(--top)] w-[var(--width)] h-[var(--height)] transition-all duration-500 ease-in-out opacity-0 -z-10 top-0 left-0 hidden md:block`}
+  >
+  </div>
 </header>
 
 <script>
-  const listItem = document.querySelectorAll("#landingHeader li")
-  const menuBackDrop = document.querySelector("#menuBackdrop") as HTMLElement
+  const listItem = document.querySelectorAll('#landingHeader li');
+  const menuBackDrop = document.querySelector('#menuBackdrop') as HTMLElement;
 
-  listItem.forEach((item) => {
-    item.addEventListener("mouseenter", () => {
-      const { left, top, width, height } = item.getBoundingClientRect()
+  listItem.forEach(item => {
+    item.addEventListener('mouseenter', () => {
+      const { left, top, width, height } = item.getBoundingClientRect();
 
-      menuBackDrop.style.setProperty("--left", `${left}px`)
-      menuBackDrop.style.setProperty("--top", `${top}px`)
-      menuBackDrop.style.setProperty("--width", `${width}px`)
-      menuBackDrop.style.setProperty("--height", `${height}px`)
+      menuBackDrop.style.setProperty('--left', `${left}px`);
+      menuBackDrop.style.setProperty('--top', `${top}px`);
+      menuBackDrop.style.setProperty('--width', `${width}px`);
+      menuBackDrop.style.setProperty('--height', `${height}px`);
 
-      menuBackDrop.style.opacity = "1"
-      menuBackDrop.style.visibility = "visible"
-    })
+      menuBackDrop.style.opacity = '1';
+      menuBackDrop.style.visibility = 'visible';
+    });
 
-    item.addEventListener("mouseleave", () => {
-      menuBackDrop.style.opacity = "0"
-      menuBackDrop.style.visibility = "hidden"
-    })
-  })
+    item.addEventListener('mouseleave', () => {
+      menuBackDrop.style.opacity = '0';
+      menuBackDrop.style.visibility = 'hidden';
+    });
+  });
 </script>
 
 <script>
-  const landingHeader = document.querySelector('#landingHeader') as HTMLElement
+  const landingHeader = document.querySelector('#landingHeader') as HTMLElement;
 
   const observerOptions = {
     root: null,
     rootMargin: '0px',
-    threshold: 0.9
-  }
+    threshold: 0.9,
+  };
 
-  const observer = new IntersectionObserver(entries=>{
+  const observer = new IntersectionObserver(entries => {
     entries.forEach(entry => {
-      const {isIntersecting} = entry
-      if(isIntersecting){
-        const color = entry.target.getAttribute('data-header-color')
-        landingHeader.style.color = color
+      const { isIntersecting } = entry;
+      if (isIntersecting) {
+        const color = entry.target.getAttribute('data-header-color');
+        landingHeader.style.color = color;
       }
-    })
-  }, observerOptions)
+    });
+  }, observerOptions);
 
-  const sections = document.querySelectorAll('.landing-section')
-  sections.forEach(section => observer.observe(section))
+  const sections = document.querySelectorAll('.landing-section');
+  sections.forEach(section => observer.observe(section));
+</script>
+
+<script>
+  const navResponsive = document.querySelector('#navResponsive') as HTMLElement
+  const cross = document.querySelector('#cross') as HTMLElement
+  const menu = document.querySelector('#menu') as HTMLElement
+  const list = document.querySelectorAll('#list li')
+
+  menu.addEventListener('click', e => {
+    navResponsive.classList.add('right-0')
+    navResponsive.classList.remove('-right-[100%]')
+    navResponsive.classList.add('opacity-1')
+    navResponsive.classList.remove('opacity-0')
+  })
+
+  cross.addEventListener('click', e => {
+    navResponsive.classList.remove('right-0')
+    navResponsive.classList.add('-right-[100%]')
+    navResponsive.classList.remove('opacity-1')
+    navResponsive.classList.add('opacity-0')
+  })
+
+  list.forEach(item => {
+    item.addEventListener('click', e => {
+      navResponsive.classList.remove('right-0')
+    navResponsive.classList.add('-right-[100%]')
+    navResponsive.classList.remove('opacity-1')
+    navResponsive.classList.add('opacity-0')
+    })
+    })
 </script>
